# analytics-report-hr-

./: .gitignore  README.md  analytics-report.qmd  analytics.py  main.py  pyproject.toml  typst-show.typ  typst-template.typ  working_hours_report.qmd
