[project]
name = "analytics-report-hr"
version = "0.1.0"
description = "Create a PDF report showing the breakdown of hours spent on the data science minor at Hogeschool Rotterdam in 2025/2026"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "quarto>=0.1.0",
    "seaborn>=0.13.2",
]
