[project]
name = "analytics-report-hr"
version = "0.1.0"
description = "Create a PDF report showing the breakdown of hours spent on the data science minor at Hogeschool Rotterdam in 2025/2026"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "papermill>=2.6.0",
    "quarto>=0.1.0",
    "seaborn>=0.13.2",
    "webcolors>=25.10.0",
]
